# Vajra-RCA

./: .gitignore  README.md  causal_inference_and_feedback_design.md  dev.sh  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py  pipeline.py
backend/app/agents/: __init__.py  graph.py  nodes.py  state.py
backend/app/core/: config.py  events.py  metrics.py  otel_logs.py  serialize.py  tracing.py
backend/app/db/: store.py
backend/app/detection/: isolation_forest.py  kitsune.py  signatures.py
backend/app/graph/: topology.py
backend/app/ingestion/: config_monitor.py  hdfs.py  nsl_kdd.py  schema.py  unsw.py  vajra_bridge.py
backend/app/llm/: gemini.py
backend/app/rag/: graphrag.py  qdrant.py
backend/app/rca/: engine.py  scoring.py
backend/app/utils/: reporter.py
backend/scripts/: validate_detector.py
backend/tests/: test_anomaly_event.py  test_attribution.py  test_behavioral_hypothesis.py  test_feedback.py  test_multi_anomaly.py  test_shap_endpoint.py  test_signatures.py  test_topology_merge.py
docs/: architecture.md  demo-runbook.md  system-features.md  validation_results.md
docs/superpowers/plans/: 2026-07-14-explainable-anomaly-rca.md
docs/superpowers/specs/: 2026-07-14-explainable-anomaly-rca-design.md  2026-07-15-feedback-learning-loop-design.md  (+1 more)
frontend/: package-lock.json  package.json
infra/: otel-collector.yaml  prometheus.yml
scripts/: dataset_validation.py  verify_e2e.py
stress_regression_testing/: plot_multi_anomaly.py  regression_test.py  run_tests.py  stress_test.py  test_report.md
(+14 files in other folders)
