[project]
name = "vajra-rca-backend"
version = "0.1.0"
description = "Network Anomaly Root-Cause Assistant — backend (ingestion, detection, topology, causal RCA, API)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-socketio>=5.11",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "networkx>=3.3",
    "python-dateutil>=2.9",
    "google-genai>=0.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "neo4j>=5.14",
    "qdrant-client>=1.6",
    "aiokafka>=0.8",
    "minio>=7.2",
    "reportlab>=4.1",
    "langgraph>=0.1",
    "shap>=0.44",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
